--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "eslint-plugin-react-native-globals": "^0.1.1"
+    "eslint-plugin-react-native-globals": "^0.1.1",
+    "jsx-ast-utils": "^2.0.1"
   }
 }
